# predictive-maintenance-ml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  data_acquisition.md  portfolio_case_study.md  project_specification.md  release_notes.md  results_summary.md
notebooks/: 01_exploratory_data_analysis.ipynb
src/predictive_maintenance/: __init__.py  artifacts.py  config.py  data.py  error_analysis.py  evaluation.py  exceptions.py  explainability.py  final_evaluation.py  models.py  predict.py  preprocessing.py  profiling.py  recommendations.py  splitting.py  thresholds.py  train.py  validation.py
tests/: test_artifacts.py  test_config.py  test_data.py  test_error_analysis.py  test_evaluation.py  test_explainability.py  test_final_evaluation.py  test_models.py  test_package.py  test_predict.py  test_preprocessing.py  test_profiling.py  test_recommendations.py  test_splitting.py  test_thresholds.py  test_train.py  test_validation.py
